[package]
name = "fk-zyre-sys"
version = "0.1.1"
edition = "2024"
description = "Low-level bindings for the Zyre library."
authors = ["Schoonology <michael.r.schoonmaker@gmail.com>", "Tomas FS <tomas@fik1.net>"]
repository = "https://github.com/straend/rust-zyre-sys"
keywords = ["zeromq", "ffi"]
categories = ["external-ffi-bindings"]
readme = "README.md"
license = "MIT"
build = "build.rs"

[build-dependencies]
bindgen = "0.71.1"

